# zis-lang

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: CheckCGotoSupported.cmake  CheckOvArithSupported.cmake  CheckSupport.cmake  Pandoc.cmake  ReadConf.cmake  ZisInstallDirs.cmake  ZisVersion.cmake  ZisWinUtil.cmake  installdir.cmake  version.cmake  winutil.cmake
core/: CMakeLists.txt  README.md  algorithm.c  algorithm.h  api.c  arrayobj.c  arrayobj.h  assembly.c  assembly.h  ast.c  ast.h  astdef.cmake  astdef.h  astdef.txt  attributes.h  bits.h  boolobj.c  boolobj.h  bytesobj.c  bytesobj.h  codegen.c  codegen.h  compat.h  compile.c  compile.h  context.c  context.h  debug.c  debug.h  exceptobj.c  exceptobj.h  floatobj.c  floatobj.h  fsutil.c  fsutil.h  funcobj.c  funcobj.h  globals.c  globals.h  instr.h  (+51 more)
doc/: CMakeLists.txt  assembly.md  conventions.md  grammar.md  instruction.md  invocation.md  methods.md
include/: zis.h
misc/: README.md  zis-mode.el
modules/: CMakeLists.txt  ModuleConf.cmake  README.md  hello.c  module.conf  prelude.c  repl.c  testing.c
src/: CMakeLists.txt  README.md  start.c
src/core/: CMakeLists.txt  README.md  algorithm.c  arrayobj.h  assembly.c  ast.c  astdef.txt  attributes.h  bytesobj.c  bytesobj.h  compile.c  debug.h  floatobj.c  fsutil.c  funcobj.c  globals.h  invoke.c  lexer.c  loader.h  mapobj.h  moduleobj.c  ndefutil.h  nilobj.c  nilobj.h  object.h  objmem.h  oplist.h  oplist.txt  platform.h  rangeobj.h  stack.h  stringobj.c  stringobj.h  strutil.h  symbolobj.c  symbolobj.h  tupleobj.c  tupleobj.h
src/modules/: CMakeLists.txt  hello.c  module.conf  repl.c
src/start/: CMakeLists.txt  winutil.c
start/: CMakeLists.txt  cliutil.c  cliutil.h  clopts.c  clopts.h  start.c  winutil.h
test/: CMakeLists.txt  core_algorithm.c  core_api.c  core_api_cxx.cc  core_bits.c  core_builtins.zis  core_compile.c  core_fsutil.c  core_gc.c  core_instr.c  core_invoke.c  core_modlist.c  core_strutil.c  start_cliutil.c  start_clopts.c  start_run.cmake  test.c  test.h
test/base/: CMakeLists.txt  core_algorithm.c  core_api.c  core_api_c89.c  core_api_cxx.cc  core_bits.c  core_compile.c  core_fsutil.c  core_instr.c  core_invoke.c  core_strutil.c  start_cliutil.c  start_run.cmake
tools/: README.md  ast2dot.py  bt2line.sh  cdocstr.py  cloc.py  coverage.sh  zis_gdb.py
