option(ZIS_BUILD_CORE    "Build `core', the ZIS library"                     ON)
option(ZIS_BUILD_START   "Build `start', an executable entry"                ON)
option(ZIS_BUILD_MODULES "Build `modules', the modules"                      ON)

function(_check_target_defined tgt)
    if(NOT TARGET ${tgt})
        message(SEND_ERROR "Target `${tgt}' is not defined")
    endif()
endfunction()

if(ZIS_BUILD_CORE)
    add_subdirectory("core")
    _check_target_defined(zis_core_tgt)
endif()

if(ZIS_BUILD_START)
    add_subdirectory("start")
    _check_target_defined(zis_start_tgt)
endif()

if(ZIS_BUILD_MODULES)
    add_subdirectory("modules")
endif()

if(DEFINED zis_core_conf_header_dir)
    set(zis_core_conf_header_dir ${zis_core_conf_header_dir} PARENT_SCOPE)
endif()
if(DEFINED zis_modules_header_dir)
    set(zis_modules_header_dir ${zis_modules_header_dir} PARENT_SCOPE)
endif()
