option(ZIS_BUILD_CORE    "Build `core', the ZIS library"                     ON)
option(ZIS_BUILD_START   "Build `start', an executable entry"                ON)
option(ZIS_BUILD_MODULES "Build `modules', the modules"                      ON)

set(zis_src_generated_code_dir "${CMAKE_CURRENT_BINARY_DIR}/_Generated")
set(zis_src_generated_code_dir ${zis_src_generated_code_dir} PARENT_SCOPE)
if(NOT IS_DIRECTORY ${zis_src_generated_code_dir})
    message(VERBOSE "Create directory ${zis_src_generated_code_dir}")
    file(MAKE_DIRECTORY ${zis_src_generated_code_dir})
endif()

function(_check_target_defined tgt)
    if(NOT TARGET ${tgt})
        message(SEND_ERROR "Target `${tgt}' is not defined")
    endif()
endfunction()

if(ZIS_BUILD_CORE)
    add_subdirectory("core")
    _check_target_defined(zis_core_tgt)
endif()

if(ZIS_BUILD_START)
    add_subdirectory("start")
    _check_target_defined(zis_start_tgt)
endif()

if(ZIS_BUILD_MODULES)
    add_subdirectory("modules")
endif()
